--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ iframe {
     </div>
     <div class="box" style="flex:1 1 100%; margin-top:20px;">
       <h4>LDA Interactive</h4>
-      <iframe src="../pyldavis/lda_10.html" style="width:100%; height:600px; border:1px solid #ccc; border-radius:8px;"></iframe>
+      <iframe src="pyldavis/lda_10.html" style="width:100%; height:600px; border:1px solid #ccc; border-radius:8px;"></iframe>
     </div>
   </div>
 </div>
