--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ iframe {
 
 <!-- Tab LDA -->
 <div id="lda" class="tab-content active">
+  <p style="margin-bottom:10px; color:#000000;">
+      This is a demo of articles 0 – 9999 from the original 306,243 articles.
+  </p>
   <div class="controls">
     <label>Document ID:</label>
     <input type="number" id="doc_id" value="9999" min="0">
@@ -102,7 +105,7 @@ iframe {
     </div>
     <div class="box" style="flex:1 1 100%; margin-top:20px;">
       <h4>LDA Interactive</h4>
-      <iframe src="pyldavis/lda_10.html" style="width:100%; height:600px; border:1px solid #ccc; border-radius:8px;"></iframe>
+       <iframe src="lda_10.html" style="width:100%; height:800px; border:1px solid #ccc; border-radius:8px;"></iframe>
     </div>
   </div>
 </div>
@@ -110,8 +113,14 @@ iframe {
 <!-- Tab PDF -->
 <div id="pdf" class="tab-content">
   <h3>PDF Explanation</h3>
-  <iframe src="Semmler_Exam_Mads1.pdf"></iframe>
+  <div style="overflow: auto; width: 100%; height: 600px; border: 1px solid #ccc; border-radius: 8px;">
+    <iframe 
+      src="Semmler_Exam_Mads1.pdf" 
+      style="width:65%; height:100%; transform: scale(1.5); transform-origin: 0 0; border: none;">
+    </iframe>
+  </div>
 </div>
+
 
 <script>
 // SWITCH 
