--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@ iframe {
 </head>
 <body>
 
-<h1>Latent Dirichlet Allocation (LDA)</h1>
+<h2>Latent Dirichlet Allocation (LDA) - Exam MADS1</h2>
+
+<div style="display: grid; grid-template-columns: 150px auto; row-gap: 5px; line-height:1.6; color:#333; margin-bottom: 20px;">
+    <div><strong>Name</strong></div>
+    <div>: Septina Winar Syahputri Semmler</div>
+    <div><strong>Matriculation</strong></div>
+    <div>: 37010019</div>
+    <div><strong>Module</strong></div>
+    <div>: Quantitative Methods in Information System; MADS1</div>
+    <div><strong>Program</strong></div>
+    <div>: Master - Applied Business on Data Science; ADS</div>
+</div>
 
 <div class="tabs">
   <div class="tab active" onclick="showTab('lda')">LDA Topic Distribution</div>
@@ -97,15 +108,15 @@ iframe {
   <div class="container" style="display:flex; gap:20px; flex-wrap:wrap; align-items:flex-start;">
     <div class="box" style="flex:1 1 45%; min-width:600px;">
       <h4>Raw Text</h4>
-      <img src="raw_text.png" alt="Raw text visualization" style="width:100%; max-width:1000px; border-radius:8px; border:1px solid #ccc;">
+      <img src="raw_text.png" alt="Raw text visualization" style="width:100%; max-width:900px; border-radius:8px; border:1px solid #ccc;">
     </div>
     <div class="box" style="flex:1 1 45%; min-width:600px;">
       <h4>Cleaned Text</h4>
-      <img src="cleaned_text.png" alt="Cleaned text visualization" style="width:100%; max-width:1000px; border-radius:8px; border:1px solid #ccc;">
+      <img src="cleaned_text.png" alt="Cleaned text visualization" style="width:100%; max-width:900px; border-radius:8px; border:1px solid #ccc;">
     </div>
     <div class="box" style="flex:1 1 100%; margin-top:20px;">
       <h4>LDA Interactive</h4>
-       <iframe src="lda_10.html" style="width:100%; height:800px; border:1px solid #ccc; border-radius:8px;"></iframe>
+      <iframe src="lda_10.html" style="width:100%; height:800px; border:1px solid #ccc; border-radius:8px;"></iframe>
     </div>
   </div>
 </div>
@@ -120,9 +131,8 @@ iframe {
     </iframe>
   </div>
 </div>
-
-
 <script>
+
 // SWITCH 
 function showTab(tabId) {
 
